# WebScan

./: CMakeLists.txt  WebScan.h  formwindow.cpp  formwindow.h  formwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.cpp  vcpkg.json
src/: CMakeLists.txt  Html.cpp  Html.h  HtmlUtils.cpp  HtmlUtils.h  HttpRequest.cpp  HttpRequest.h  Log.cpp  Log.h  Utils.cpp  Utils.h
